--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -8,7 +8,7 @@ on:
 
 jobs:
 
-  build:
+  build_image:
 
     runs-on: ubuntu-latest
 
@@ -16,3 +16,25 @@ jobs:
     - uses: actions/checkout@v3
     - name: Build the Docker image
       run: docker build . --file Dockerfile --tag devops-esgi-back:$(date +%s)
+
+    - name: Log in to Docker Hub
+      uses: docker/login-action@v3
+      with: 
+        username: ${{ secrets.DOCKER_HUB_LOGIN }}
+        password: ${{ secrets.DOCKER_HUB_PASSWORD }}
+
+    - name: Push Docker image with release version
+      uses: docker/build-push-action@v2
+      with: 
+        context: .
+        file: ./Dockerfile
+        push: true
+        tags: melissaesgi/devops-back-esgi:1.0
+
+    - name: Push Docker image with latest version
+      uses: docker/build-push-action@v5
+      with: 
+        context: .
+        file: ./Dockerfile
+        push: true
+        tags: melissaesgi/devops-back-esgi:latest    
