--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -6,9 +6,14 @@ on:
   pull_request:
     branches: [ "main" ]
 
+inputs:
+  image_version:
+    description: 'Image version'
+    required: true
+
 jobs:
 
-  build_image:
+  build_image_and_deploy_image:
 
     runs-on: ubuntu-latest
 
@@ -29,7 +34,7 @@ jobs:
         context: .
         file: ./Dockerfile
         push: true
-        tags: melissaesgi/devops-back-esgi:1.0
+        tags: melissaesgi/devops-back-esgi:${{ inputs.image_version }
 
     - name: Push Docker image with latest version
       uses: docker/build-push-action@v5
