--- a/.github/workflows/build-test-app.yml
+++ b/.github/workflows/build-test-app.yml
@@ -24,7 +24,12 @@ jobs:
       run: |
         python -m pip install --upgrade pip
         pip install flake8 pytest
-        if [ -f requirements.txt ]; then pip install -r requirements/base.txt; fi
+        if [ -f requirements/base.txt ]; then pip install -r requirements/base.txt; fi
+
+    - name: Dependency Check
+      run: |
+        pip install safety
+        if [ -f requirements/base.txt ]; then safety check -r requirements/base.txt; fi
 
     - name: Test with pytest
       run: |
