--- a/.github/workflows/build-test-app.yml
+++ b/.github/workflows/build-test-app.yml
@@ -23,12 +23,11 @@ jobs:
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
-        pip install flake8 pytest
+        pip install flake8 pytest safety
         if [ -f requirements/base.txt ]; then pip install -r requirements/base.txt; fi
 
     - name: Dependency Check
       run: |
-        pip install safety
         if [ -f requirements/base.txt ]; then safety check -r requirements/base.txt; fi
 
     - name: Test with pytest
