--- a/.github/workflows/build-test-app.yml
+++ b/.github/workflows/build-test-app.yml
@@ -23,12 +23,8 @@ jobs:
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
-        pip install flake8 pytest safety
+        pip install flake8 pytest
         if [ -f requirements/base.txt ]; then pip install -r requirements/base.txt; fi
-
-    - name: Dependency Check
-      run: |
-        if [ -f requirements/base.txt ]; then safety check -r requirements/base.txt; fi
 
     - name: Test with pytest
       run: |
