--- a/.github/workflows/deploy-app-prod.yml
+++ b/.github/workflows/deploy-app-prod.yml
@@ -3,21 +3,35 @@ name: deploy app in prod
 on:
   workflow_dispatch:
     inputs:
-      image_version:
-        description: 'Image version'
+      number_version_project:
+        description: 'Project number version'
         required: true
 
 jobs:
-
-  build_image_and_deploy_image_on_prod:
-
+  create_release:
     runs-on: ubuntu-latest
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v2
+      - name: Create Release
+        id: create_release
+        uses: actions/create-release@v1
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }} # This token is provided by Actions, you do not need to create your own token
+        with:
+          tag_name: v.${{ inputs.number_version_project }}
+          release_name: Release v.${{ inputs.number_version_project }}
+          draft: false
+          prerelease: false
 
+  build_image:
+    runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v3
     - name: Build the Docker image
       run: docker build . --file Dockerfile --tag devops-esgi-back:$(date +%s)
 
+  deploy_release_image_on_docker_hub:
     - name: Log in to Docker Hub
       uses: docker/login-action@v3
       with: 
@@ -30,7 +44,7 @@ jobs:
         context: .
         file: ./Dockerfile
         push: true
-        tags: melissaesgi/devops-back-esgi:${{ inputs.image_version }}
+        tags: melissaesgi/devops-back-esgi:v.${{ inputs.number_version_project }}
 
     - name: Push Docker image with latest version
       uses: docker/build-push-action@v5
