--- a/.github/workflows/deploy-app-prod.yml
+++ b/.github/workflows/deploy-app-prod.yml
@@ -27,8 +27,8 @@ jobs:
   build_image:
     runs-on: ubuntu-latest
     steps:
-    - uses: actions/checkout@v3
-    - name: Build the Docker image
+      - name: Build the Docker image
+      uses: actions/checkout@v3
       run: docker build . --file Dockerfile --tag devops-esgi-back:$(date +%s)
 
   deploy_release_image_on_docker_hub:
