--- a/.github/workflows/deploy-app-prod.yml
+++ b/.github/workflows/deploy-app-prod.yml
@@ -17,7 +17,7 @@ jobs:
         id: create_release
         uses: actions/create-release@v1
         env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }} # This token is provided by Actions, you do not need to create your own token
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
           tag_name: v.${{ inputs.number_version_project }}
           release_name: Release v.${{ inputs.number_version_project }}
@@ -28,8 +28,8 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: Build the Docker image
-      uses: actions/checkout@v3
-      run: docker build . --file Dockerfile --tag devops-esgi-back:$(date +%s)
+        uses: actions/checkout@v3
+        run: docker build . --file Dockerfile --tag devops-esgi-back:$(date +%s)
 
   deploy_release_image_on_docker_hub:
     - name: Log in to Docker Hub
@@ -52,4 +52,4 @@ jobs:
         context: .
         file: ./Dockerfile
         push: true
-        tags: melissaesgi/devops-back-esgi:latest    
+        tags: melissaesgi/devops-back-esgi:latest
