--- a/.github/workflows/deploy-app-prod.yml
+++ b/.github/workflows/deploy-app-prod.yml
@@ -4,7 +4,7 @@ on:
   workflow_dispatch:
     inputs:
       number_version_project:
-        description: 'Project number version'
+        description: 'Project number '
         required: true
 
 jobs:
@@ -17,21 +17,23 @@ jobs:
         id: create_release
         uses: actions/create-release@v1
         env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }} # This token is provided by Actions, you do not need to create your own token
         with:
           tag_name: v.${{ inputs.number_version_project }}
           release_name: Release v.${{ inputs.number_version_project }}
+          body: |
+            Test
           draft: false
           prerelease: false
 
-  build_image:
+  build_image_and_deploy_image_on_docker_hub:
     runs-on: ubuntu-latest
-    steps:
-      - name: Build the Docker image
-        uses: actions/checkout@v3
-        run: docker build . --file Dockerfile --tag devops-esgi-back:$(date +%s)
 
-  deploy_release_image_on_docker_hub:
+    steps:
+    - uses: actions/checkout@v3
+    - name: Build the Docker image
+      run: docker build . --file Dockerfile --tag devops-esgi-back:$(date +%s)
+
     - name: Log in to Docker Hub
       uses: docker/login-action@v3
       with: 
@@ -52,4 +54,4 @@ jobs:
         context: .
         file: ./Dockerfile
         push: true
-        tags: melissaesgi/devops-back-esgi:latest
+        tags: melissaesgi/devops-back-esgi:latest    
