--- a/.github/workflows/build-test-app.yml
+++ b/.github/workflows/build-test-app.yml
@@ -11,40 +11,51 @@ permissions:
   contents: read
 
 jobs:
-  build_and_test_project:
+  build_and_test:
     runs-on: ubuntu-latest
     steps:
-    - uses: actions/checkout@v3
+    # https://github.com/actions/checkout
+    - name: Init Checkout
+      uses: actions/checkout@latest
+
+    # https://github.com/actions/setup-python
     - name: Set up Python 3.10
-      uses: actions/setup-python@v3
+      uses: actions/setup-python@latest
       with:
         python-version: "3.10"
+        cache: 'pip'
+
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
-        pip install flake8 pytest
         if [ -f requirements/base.txt ]; then pip install -r requirements/base.txt; fi
 
-    - name: Test with pytest
+    # stop the build if there are Python syntax errors or undefined names
+    # exit-zero treats all errors as warnings. The GitHub editor is 127 chars wide
+    - name: Lint
       run: |
+        pip install flake8 ruff
+        flake8 . --count --select=E9,F63,F7,F82 --show-source --statistics
+        flake8 . --count --exit-zero --max-complexity=10 --max-line-length=127 --statistics
+        ruff --output-format=github .
+
+    - name: Running Tests
+      run: |
+        pip install pytest
         pytest ./article/tests.py
 
-    - name: Lint with flake8
-      run: |
-        # stop the build if there are Python syntax errors or undefined names
-        flake8 . --count --select=E9,F63,F7,F82 --show-source --statistics
-        # exit-zero treats all errors as warnings. The GitHub editor is 127 chars wide
-        flake8 . --count --exit-zero --max-complexity=10 --max-line-length=127 --statistics
-
-  sonarcloud:
-    name: SonarCloud
+  sonar:
+    needs: build_and_test
+    name: Sonar
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v3
+      # https://github.com/actions/checkout
+      - uses: actions/checkout@latest
         with:
           fetch-depth: 0  # Shallow clones should be disabled for a better relevancy of analysis
-      - name: SonarCloud Scan
+
+      - name: Sonar Scan
         uses: SonarSource/sonarcloud-github-action@master
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}  # Needed to get PR information, if any
-          SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}    
+          SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
