--- a/.github/workflows/build-test-app.yml
+++ b/.github/workflows/build-test-app.yml
@@ -16,11 +16,11 @@ jobs:
     steps:
     # https://github.com/actions/checkout
     - name: Init Checkout
-      uses: actions/checkout@latest
+      uses: actions/checkout@v4
 
     # https://github.com/actions/setup-python
     - name: Set up Python 3.10
-      uses: actions/setup-python@latest
+      uses: actions/setup-python@v5
       with:
         python-version: "3.10"
         cache: 'pip'
@@ -50,7 +50,7 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       # https://github.com/actions/checkout
-      - uses: actions/checkout@latest
+      - uses: actions/checkout@v4
         with:
           fetch-depth: 0  # Shallow clones should be disabled for a better relevancy of analysis
 
