--- a/.github/workflows/build-test-app.yml
+++ b/.github/workflows/build-test-app.yml
@@ -32,14 +32,13 @@ jobs:
         python -m pip install --upgrade pip
         if [ -f requirements/base.txt ]; then pip install -r requirements/base.txt; fi
 
-    # stop the build if there are Python syntax errors or undefined names
-    # exit-zero treats all errors as warnings. The GitHub editor is 127 chars wide
     - name: Lint
       run: |
         pip install flake8 ruff
         flake8 . --count --select=E9,F63,F7,F82 --show-source --statistics
         flake8 . --count --exit-zero --max-complexity=10 --max-line-length=127 --statistics
         ruff --output-format=github .
+      continue-on-error: true #  keep the workflow from failing if the linting step doesn't succeed
 
     - name: Running Tests
       run: |
