--- a/.github/workflows/build-test-app.yml
+++ b/.github/workflows/build-test-app.yml
@@ -34,9 +34,10 @@ jobs:
 
     - name: Lint
       run: |
-        pip install flake8 ruff
+        pip install flake8 flake8-json ruff
         flake8 . --count --select=E9,F63,F7,F82 --show-source --statistics
         flake8 . --count --exit-zero --max-complexity=10 --max-line-length=127 --statistics
+        flake8 . --format=json --output-file=flake8-report.json
         ruff --output-format=github .
       continue-on-error: true #  keep the workflow from failing if the linting step doesn't succeed
 
@@ -60,3 +61,7 @@ jobs:
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}  # Needed to get PR information, if any
           SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
+        with:
+          args: >
+            -Dsonar.analysis.mode=issues 
+            -Dsonar.report.export.path=flake8-report.json
