--- a/.github/workflows/build-test-app.yml
+++ b/.github/workflows/build-test-app.yml
@@ -46,7 +46,7 @@ jobs:
       uses: actions/upload-artifact@v4
       with:
         name: flake8-report
-        path: flake8-report.json
+        path: ./report_code/flake8-report.json
 
     - name: Running Tests
       run: |
@@ -66,8 +66,8 @@ jobs:
       # https://github.com/actions/download-artifact
       - uses: actions/download-artifact@v4
         with:
-          name: flake8-report.json
-          path: .
+          name: flake8-report
+          path: ./report_code
 
       - name: Sonar Scan
         uses: SonarSource/sonarcloud-github-action@master
