--- a/.github/workflows/build-test-app.yml
+++ b/.github/workflows/build-test-app.yml
@@ -41,12 +41,15 @@ jobs:
         ruff --output-format=github .
       continue-on-error: true #  keep the workflow from failing if the linting step doesn't succeed
 
+    - run: |
+        mkdir report
+
     # https://github.com/actions/upload-artifact
     - name: Upload Flake8 Report
       uses: actions/upload-artifact@v4
       with:
         name: flake8-report
-        path: ./report_code/flake8-report.json
+        path: ./report/flake8-report.json
 
     - name: Running Tests
       run: |
@@ -67,7 +70,7 @@ jobs:
       - uses: actions/download-artifact@v4
         with:
           name: flake8-report
-          path: ./report_code
+          path: ./report
 
       - name: Sonar Scan
         uses: SonarSource/sonarcloud-github-action@master
