--- a/.github/workflows/build-test-app.yml
+++ b/.github/workflows/build-test-app.yml
@@ -49,7 +49,7 @@ jobs:
       uses: actions/upload-artifact@v4
       with:
         name: flake8-report
-        path: ./report/flake8-report.json
+        path: /report/flake8-report.json
 
     - name: Running Tests
       run: |
@@ -70,7 +70,7 @@ jobs:
       - uses: actions/download-artifact@v4
         with:
           name: flake8-report
-          path: ./report
+          path: /report
 
       - name: Sonar Scan
         uses: SonarSource/sonarcloud-github-action@master
