--- a/.github/workflows/build-test-app.yml
+++ b/.github/workflows/build-test-app.yml
@@ -38,8 +38,7 @@ jobs:
         flake8 . --count --select=E9,F63,F7,F82 --show-source --statistics
         flake8 . --count --exit-zero --max-complexity=10 --max-line-length=127 --statistics
         ruff --output-format=github .
-        mkdir report
-        flake8 . --format=json --output-file=report/flake8-report.json
+        flake8 . --format=json --output-file=flake8-report.json
       continue-on-error: true #  keep the workflow from failing if the linting step doesn't succeed
 
     # https://github.com/actions/upload-artifact
@@ -47,7 +46,7 @@ jobs:
       uses: actions/upload-artifact@v4
       with:
         name: flake8-report
-        path: /report/flake8-report.json
+        path: flake8-report.json
 
     - name: Running Tests
       run: |
@@ -68,7 +67,7 @@ jobs:
       - uses: actions/download-artifact@v4
         with:
           name: flake8-report
-          path: /report
+          path: .
 
       - name: Sonar Scan
         uses: SonarSource/sonarcloud-github-action@master
