--- a/.github/workflows/build-test-app.yml
+++ b/.github/workflows/build-test-app.yml
@@ -41,12 +41,16 @@ jobs:
         flake8 . --format=json --output-file=flake8-report.json
       continue-on-error: true #  keep the workflow from failing if the linting step doesn't succeed
 
+    - name: Debug
+      run: ls -R
+
+
     # https://github.com/actions/upload-artifact
     - name: Upload Flake8 Report
       uses: actions/upload-artifact@v4
       with:
         name: flake8-report
-        path: ./flake8-report.json
+        path: flake8-report.json
 
     - name: Running Tests
       run: |
