--- a/.github/workflows/build-test-app.yml
+++ b/.github/workflows/build-test-app.yml
@@ -42,6 +42,7 @@ jobs:
 
     - name: Debug
       run: ls -R
+      run: cat report/flake8-report-2.json
 
 
     # https://github.com/actions/upload-artifact
