get test report

--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -11,3 +11,6 @@ sonar.sources=./sonar-project.properties
 
 # Encoding of the source code. Default is default system encoding
 sonar.sourceEncoding=UTF-8
+
+# flake8
+#sonar.python.flake8.reportPaths=
