--- a/.github/workflows/build-test-app.yml
+++ b/.github/workflows/build-test-app.yml
@@ -52,24 +52,28 @@ jobs:
         pip install pytest
         pytest ./article/tests.py
 
-  # sonar:
-  #   needs: build_and_test
-  #   name: Sonar
-  #   runs-on: ubuntu-latest
-  #   steps:
-  #     # https://github.com/actions/checkout
-  #     - uses: actions/checkout@v4
-  #       with:
-  #         fetch-depth: 0  # Shallow clones should be disabled for a better relevancy of analysis
+  sonar:
+    needs: build_and_test
+    name: Sonar
+    runs-on: ubuntu-latest
+    steps:
+      # https://github.com/actions/checkout
+      - uses: actions/checkout@v4
+        with:
+          fetch-depth: 0  # Shallow clones should be disabled for a better relevancy of analysis
 
-  #     # https://github.com/actions/download-artifact
-  #     - uses: actions/download-artifact@v4
-  #       with:
-  #         name: flake8-report
-  #         path: .
+      # https://github.com/actions/download-artifact
+      - uses: actions/download-artifact@v4
+        with:
+          name: report
+          path: .
 
-  #     - name: Sonar Scan
-  #       uses: SonarSource/sonarcloud-github-action@master
-  #       env:
-  #         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}  # Needed to get PR information, if any
-  #         SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
+      - name: Degub
+        run: ls -l
+            
+       #https://github.com/SonarSource/sonarcloud-github-action
+      - name: Sonar Scan
+        uses: SonarSource/sonarcloud-github-action@master
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}  # Needed to get PR information, if any
+          SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
