--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -13,4 +13,4 @@ sonar.sources=./sonar-project.properties
 sonar.sourceEncoding=UTF-8
 
 # flake8
-sonar.python.flake8.reportPaths=flake8-report.txt
+sonar.python.flake8.reportPaths=flake8.txt
