--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -14,3 +14,6 @@ sonar.sourceEncoding=UTF-8
 
 # flake8
 sonar.python.flake8.reportPaths=flake8.txt
+
+# ruff
+sonar.python.ruff.reportPaths=ruff.txt
