--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -13,7 +13,7 @@ sonar.sources=.
 sonar.sourceEncoding=UTF-8
 
 # flake8
-sonar.python.flake8.reportPaths=flake8.txt
+#sonar.python.flake8.reportPaths=flake8.txt
 
 # ruff
 sonar.python.ruff.reportPaths=ruff.txt
