--- a/.github/workflows/build-test-app.yml
+++ b/.github/workflows/build-test-app.yml
@@ -74,6 +74,6 @@ jobs:
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}  # Needed to get PR information, if any
           SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
-        with:  
-          args: >
-            -Dsonar.python.flake8.reportPaths=flake8.txt
+        # with:  
+        #   args: >
+        #     -Dsonar.python.flake8.reportPaths=flake8.txt
