--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -12,8 +12,5 @@ sonar.sources=.
 # Encoding of the source code. Default is default system encoding
 sonar.sourceEncoding=UTF-8
 
-# flake8
-#sonar.python.flake8.reportPaths=flake8.txt
-
 # ruff
-sonar.python.ruff.reportPaths=ruff.txt
+# sonar.python.ruff.reportPaths=ruff.txt
