add report ruff in pipeline

--- a/.github/workflows/build-test-app.yml
+++ b/.github/workflows/build-test-app.yml
@@ -32,13 +32,19 @@ jobs:
         python -m pip install --upgrade pip
         if [ -f requirements/base.txt ]; then pip install -r requirements/base.txt; fi
 
-    - name: Lint
+    - name: Lint with flake8
       run: |
-        pip install flake8 ruff
+        pip install flake8
         mkdir report
         flake8 --format=pylint --output-file=report/flake8.txt ./
+      continue-on-error: true #  keep the workflow from failing if the linting step doesn't succeed
+
+    - name: Lint with ruff
+      run: |
+        pip install ruff
         ruff -o report/ruff.txt .
       continue-on-error: true #  keep the workflow from failing if the linting step doesn't succeed
+
 
     # https://github.com/actions/upload-artifact
     - name: Upload Test Report
