--- a/.github/workflows/deploy-app-prod_2.yml
+++ b/.github/workflows/deploy-app-prod_2.yml
@@ -23,6 +23,9 @@ jobs:
           sudo apt-get update && sudo apt-get install -y kubectl
 
       - name: Check installed packages of kube    
-        run : kubectl version --output=yaml 
+        run : kubectl version --output=yaml
+
+      - name: Kube config
+        run : echo "kubectl ok"  
 
 
