--- a/.github/workflows/deploy-app-prod_2.yml
+++ b/.github/workflows/deploy-app-prod_2.yml
@@ -29,6 +29,6 @@ jobs:
         run : echo "${{ secrets.KUBE_CONFIG }}" > kubeconfig.yaml
 
       - name: Deploy
-        run : kubectl apply -f ./kube/. --kubeconfig=kubeconfig.yaml
+        run : kubectl apply -f ./kube/. --kubeconfig=kubeconfig.yaml -n 4al2-the-avengers --validate=false
 
 
