--- a/.github/workflows/deploy-app-prod_2.yml
+++ b/.github/workflows/deploy-app-prod_2.yml
@@ -29,10 +29,10 @@ jobs:
         run : echo "${{ secrets.KUBE_CONFIG }}" > kubeconfig.yaml
 
       - name: Deploy
-        run : kubectl apply ./kube/. --kubeconfig=kubeconfig.yaml -n 4al2-the-avengers
+        run : kubectl apply -k ./kube/. --kubeconfig=kubeconfig.yaml -n 4al2-the-avengers
 
       - name: If error, delete resources
         if: ${{ failure() }}
-        run: kubectl delete -f ./kube/. --kubeconfig=kubeconfig.yaml -n 4al2-the-avengers
+        run: kubectl delete -k ./kube/. --kubeconfig=kubeconfig.yaml -n 4al2-the-avengers
 
 
